--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=8.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "psr/log": "^1.0.0"
+        "psr/log": "^1 || ^2 || ^3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-0": {
